2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>

	* gtkrc: missed style declaration for docnotebooktab

2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>

	* TabStrip.cs: de-coupled TabStrip from Styles.cs

	* gtkrc: added style assignment for TabStrip

2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>

	* gtkrc: testing git config for easier pushes

2015-01-30  Jerold Haas  <jeroldhaas@gmail.com>

	* StatusArea.cs: added gtkrc support for StatusArea (not sure
	if working) :S

	* gtkrc: * added "teststyle" assignment for GtkComboBox (may
	be broken due to syntax or GTK# verison)
	* added "teststyle" assignment for StatusArea (not sure if
	working or not) :S

2015-01-29  Jerold Haas  <jeroldhaas@gmail.com>

	* RoundButton.cs: alter DrawBackground to use gtkrc settings

	* IdeStartup.cs: added section for other devs to implement
	MONODEVELOP_DARK Environment variable... also commented out
	selector code for prototyping use

	* gtkrc: replace default gtkrc for finding out what doesn't
	pull from gtkrc (this one's pretty extensive)


2010-08-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/AuthorInformation.cs:
	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/AuthorInformationPanel.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/GlobalAuthorInformationPanel.cs:
	  Moved AuthorInformation to MD.Projects. Use the new
	  AuthorInformation added to Solution and SolutionItem. Track
	  api changes.

2010-08-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/RootWorkspace.cs: Pick a good default
	  configuration when loading a solution for the first time.
	  Fixes bug 627297 - Projects from VS.NET solution are not
	  build.

2010-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SolutionNodeBuilder.cs:
	  Don't show the project count in the solution node. That